test/samples/valid/addition.ygl
node Foo {
    out {
        int x = 1;
        int y = 2;
    }
}

node Bar {
    in {
        int a;
        int b;
    }

    out {
        int result;
    }

    process {
        out.result = in.a + in.b;
    }
}

node Check : Print;

Foo.out.x -> Bar.in.a;
Foo.out.y -> Bar.in.b;
Bar.out.result -> Check.in.text;
expect:3