test/samples/invalid/nodeNodevarSwitch.ygl
Foo node {
    out {
        int result;
    }
    process {
        out.result = 2 + 2;
    }
}